Cleaned up some of the javascript to make it a bit smaller, also fixed the responsiveness a bit. looks better on mobile.

--- a/css/app.css
+++ b/css/app.css
@@ -162,3 +162,30 @@ h1 {
     list-style: none;
     display: inline-block;
 }
+
+/* Media Queries */
+
+@media only screen and (max-width: 700px) {
+  .score-panel {
+    width: 90%;
+    font-size: 2em;
+  }
+
+  .deck {
+    width: 95%;
+    padding: 16px;
+    min-height: 100vw;
+  }
+
+  .deck .card {
+    width: 17vw;
+    height: 17vw;
+  }
+}
+
+@media only screen and (min-width: 625px) and (max-width: 701px) {
+  .deck .card {
+    width: 15vw;
+    height: 15vw;
+  }
+} 
